K8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duniversity-service
  namespace: duniversity-ns
spec:
  selector: 
    app: duniversity-app
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
