K8s/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockLatest
metadata:
  name: block-latest
spec:
  enforcementAction: deny   
  match:
    namespaces: ["pavi-ns"] 
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
